@@ -60,6 +60,7 @@ public class HttpsInboundRequest extends HttpInboundRequest {
      * @param protocol
      *            The protocol name and version.
      */
+    @SuppressWarnings("deprecation")
     public HttpsInboundRequest(Context context, Connection<Server> connection,
             String methodName, String resourceUri, String protocol) {
         super(context, connection, methodName, resourceUri, protocol);
@@ -71,12 +72,18 @@ public class HttpsInboundRequest extends HttpInboundRequest {
             getAttributes().put(
                     HeaderConstants.ATTRIBUTE_HTTPS_CLIENT_CERTIFICATES,
                     clientCertificates);
+
+            // TODO: To be moved in a ClientInfo subclass
+            getClientInfo().setCertificates(clientCertificates);
         }
 
         String cipherSuite = getConnection().getSslCipherSuite();
         if (cipherSuite != null) {
             getAttributes().put(HeaderConstants.ATTRIBUTE_HTTPS_CIPHER_SUITE,
                     cipherSuite);
+
+            // TODO: To be moved in a ClientInfo subclass
+            getClientInfo().setCipherSuite(cipherSuite);
         }
 
         Integer keySize = getConnection().getSslKeySize();
